--- a/strategy.ipynb
+++ b/strategy.ipynb
@@ -223,6 +223,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Final calculations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = qndata.load_data(min_date=\"2000-01-01\",\n",
+    "                        #max_date=\"2019-08-13\",           # You should not limit max date for the submission!\n",
+    "                        dims=(\"time\", \"field\", \"asset\"), # DataArray coordinates\n",
+    "                        forward_order=True               # Load data in ascending order\n",
+    "                       )\n",
+    "adl = qnta.ad_line(data.sel(field=\"close\")) * 1.0\n",
+    "adl_ma = qnta.ema(adl, 110)\n",
+    "\n",
+    "adl_ma_ch = adl_ma - adl_ma.shift(time=13)\n",
+    "positive_trend = adl_ma_ch > 0\n",
+    "\n",
+    "output = data.sel(field=\"is_liquid\")\n",
+    "output = output.where(positive_trend)\n",
+    "output = output / output.sum(\"asset\")\n",
+    "\n",
+    "stats = qnstats.calc_stat(data, output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Plots"
    ]
   },
