--- a/strategy.ipynb
+++ b/strategy.ipynb
@@ -40,7 +40,8 @@
     "import plotly.graph_objs as go\n",
     "\n",
     "# time lib:\n",
-    "import time"
+    "import time\n",
+    "import datetime as dt"
    ]
   },
   {
@@ -70,8 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = qndata.load_data(min_date=\"2000-01-01\",\n",
-    "                        max_date=\"2019-08-13\",           # You should not limit max date for the submission!\n",
+    "data = qndata.load_data(tail=dt.timedelta(days=8*365),\n",
     "                        dims=(\"time\", \"field\", \"asset\"), # DataArray coordinates\n",
     "                        forward_order=True               # Load data in ascending order\n",
     "                       )"
@@ -232,8 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = qndata.load_data(min_date=\"2000-01-01\",\n",
-    "                        #max_date=\"2019-08-13\",           # You should not limit max date for the submission!\n",
+    "data = qndata.load_data(tail=dt.timedelta(days=4*365),\n",
     "                        dims=(\"time\", \"field\", \"asset\"), # DataArray coordinates\n",
     "                        forward_order=True               # Load data in ascending order\n",
     "                       )\n",
@@ -354,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
