--- a/strategy.ipynb
+++ b/strategy.ipynb
@@ -41,7 +41,8 @@
     "\n",
     "# time lib:\n",
     "import time\n",
-    "import datetime as dt"
+    "import datetime as dt\n",
+    "import qnt.exposure as qne"
    ]
   },
   {
@@ -201,6 +202,10 @@
     "output = output.where(positive_trend)\n",
     "output = output / output.sum(\"asset\")\n",
     "\n",
+    "#fix exposure\n",
+    "output = qne.drop_bad_days(output)\n",
+    "qnstats.check_exposure(output)\n",
+    "\n",
     "stats = qnstats.calc_stat(data, output)\n",
     "\n",
     "display(stats.to_pandas().tail())\n",
@@ -245,6 +250,9 @@
     "output = data.sel(field=\"is_liquid\")\n",
     "output = output.where(positive_trend)\n",
     "output = output / output.sum(\"asset\")\n",
+    "\n",
+    "output = qne.drop_bad_days(output)\n",
+    "qnstats.check_exposure(output)\n",
     "\n",
     "stats = qnstats.calc_stat(data, output)"
    ]
@@ -357,5 +365,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
